###################
Nagios Change Log
###################


2.0b2 - ??/??/????
------------------
* Removed (un)setenv() calls for systems that don't support it
* Fixed problem with installing sample config files



2.0b1 - 12/15/2004
------------------
* Added triggered downtime
* Basic adaptive monitoring features
* Added ability to retain scheduling information
* Change in hostgroup authorization (need to be authorized for all member hosts)
* Host dependencies are now checked before service notifications are sent out
* Added on-demand host/service macros (i.e. $VARIABLE:host:service$)
* Added notes and action_url directives to extended host/service definitions
* Added inherits_parent flag to host and service dependencies
* Added servicegroups
* Added host freshness checking
* Changed way in which initial states are logged
* Added timeperiods and state options to escalation definitions
* Added hostgroups directive to host definitions
* Extended host/service info definitions are now stored in standard object
  config files
* Added regexp matching in object config files (with --enable-regexp-matching
  option to configure script)
* Changed default name of status, comment, downtime, and retention files
* Removed DB support for extended data and retention data
* Multiple service descriptions can be used in both service dependency
  and service escalation definitions
* Moved contact groups directive from hostgroup definitions to host
  definitions
* Added worker thread to increase buffer size of external command file
* Added object_cache_file directive to allow CGI to read cached copy of
  object definitions
* Added DURATION, DURATIONSEC, HOSTDOWNTIME, and SERVICEDOWNTIME macros
* Removed hostgroup escalations
* Added passive host checks
* Event handler commands can now contain arguments
* Contact notification commands can now contain arguments (Greg Vickers)
* Support for multiple members directives in hostgroup definitions